--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
-<body style="padding-top: 80px">
+<body>
   <!--Шапка сайта-->
   <header class="header">
     <div class="container header__container">
@@ -83,7 +83,7 @@
     <!--Особенности-->
     <section class="section feature__section">
       <h2 class="visually--hidden">Особенности</h2>
-      <div class="container">
+      <div class="container feature__container">
         <ul class="feature__list card__set">
           <li class="feature__item card__item">
             <h3 class="feature__title">Внимание к деталям</h3>
@@ -120,8 +120,8 @@
           <li class="work__item card__item">
             <picture>
               <source srcset="./images/box1.webp 1x, ./images/box1x2.webp 2x" type="image/webp" />
-              <img srcset="./images/box1.jpg 1x, ./images/box1x2.jpg 2x" src="./images/box1.jpg" width="370"
-                height="294" alt="Разработка" />
+              <source srcset="./images/box1.jpg 1x, ./images/box1x2.jpg 2x" type="image/jpeg" />
+              <img src="./images/box1.jpg" width="370" height="294" alt="Разработка" />
             </picture>
             <div class="work__variant">
               <p class="work__title">ДЕСКТОПТНЫЕ ПРИЛОЖЕНИЯ</p>
@@ -130,8 +130,8 @@
           <li class="work__item card__item">
             <picture>
               <source srcset="./images/box2.webp 1x, ./images/box2x2.webp 2x" type="image/webp" />
-              <img srcset="./images/box2.jpg 1x, ./images/box2x2.jpg 2x" src="./images/box2.jpg" width="370"
-                height="294" alt="Поддержка" />
+              <source srcset="./images/box2.jpg 1x, ./images/box2x2.jpg 2x" type="image/jpeg" />
+              <img src="./images/box2.jpg" width="370" height="294" alt="Поддержка" />
             </picture>
             <div class="work__variant">
               <p class="work__title">МОБИЛЬНЫЕ ПРИЛОЖЕНИЯ</p>
@@ -140,8 +140,8 @@
           <li class="work__item card__item">
             <picture>
               <source srcset="./images/box3.webp 1x, ./images/box3x2.webp 2x" type="image/webp" />
-              <img srcset="./images/box3.jpg 1x, ./images/box3x2.jpg 2x" src="./images/box3.jpg" width="370"
-                height="294" alt="Дизайн" />
+              <source srcset="./images/box3.jpg 1x, ./images/box3x2.jpg 2x" type="image/jpeg">
+              <img src="./images/box3.jpg" width="370" height="294" alt="Дизайн" />
             </picture>
             <div class="work__variant">
               <p class="work__title">ДИЗАЙНЕРСКИЕ РЕШЕНИЯ</p>
@@ -158,8 +158,8 @@
           <li class="team__item card__item">
             <picture>
               <source srcset="./images/team1.webp 1x, ./images/team1x2.webp 2x" type="image/webp" />
-              <img srcset="./images/team1.jpg 1x, ./images/team1x2.jpg 2x" src="./images/team1.jpg"
-                alt="Product Designer photo" width="450" height="460" />
+              <source srcset="./images/team1.jpg 1x, ./images/team1x2.jpg 2x" type="image/jpeg" />
+              <img src="./images/team1.jpg" alt="Product Designer photo" width="450" height="460" />
             </picture>
             <div class="team__wrapper">
               <h3 class="team__title">Игорь Демьяненко</h3>
@@ -203,8 +203,8 @@
           <li class="team__item card__item">
             <picture>
               <source srcset="./images/team2.webp 1x, ./images/team2x2.webp 2x" type="image/webp" />
-              <img srcset="./images/team2.jpg 1x, ./images/team2x2.jpg 2x" src="./images/team2.jpg"
-                alt="Frontend Developer photo" width="450" height="460" />
+              <source srcset="./images/team2.jpg 1x, ./images/team2x2.jpg 2x" type="image/jpeg" />
+              <img src="./images/team2.jpg" alt="Frontend Developer photo" width="450" height="460" />
             </picture>
             <div class="team__wrapper">
               <h3 class="team__title">Ольга Репина</h3>
@@ -248,8 +248,8 @@
           <li class="team__item card__item">
             <picture>
               <source srcset="./images/team3.webp 1x, ./images/team3x2.webp 2x" type="image/webp" />
-              <img srcset="./images/team3.jpg 1x, ./images/team3x2.jpg 2x" src="./images/team3.jpg"
-                alt="Marketing photo" width="450" height="460" />
+              <source srcset="./images/team3.jpg 1x, ./images/team3x2.jpg 2x" type="image/jpeg" />
+              <img src="./images/team3.jpg" alt="Marketing photo" width="450" height="460" />
             </picture>
             <div class="team__wrapper">
               <h3 class="team__title">Николай Тарасов</h3>
@@ -293,8 +293,8 @@
           <li class="team__item card__item">
             <picture>
               <source srcset="./images/team4.webp 1x, ./images/team4x2.webp 2x" type="image/webp" />
-              <img srcset="./images/team4.jpg 1x, ./images/team4x2.jpg 2x" src="./images/team4.jpg"
-                alt="UI Designer photo" width="450" height="460" />
+              <source srcset="./images/team4.jpg 1x, ./images/team4x2.jpg 2x" type="image/jpeg" />
+              <img src="./images/team4.jpg" alt="UI Designer photo" width="450" height="460" />
             </picture>
             <div class="team__wrapper">
               <h3 class="team__title">Михаил Ермаков</h3>
@@ -529,7 +529,7 @@
       </div>
     </div>
   </div>
-
+  <script src="./js/header-height.js"></script>
   <script src="./js/modal.js"></script>
   <script src="./js/menu.js"></script>
 </body>
