--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./css/main.min.css" />
 </head>
 
-<body style="padding-top: 80px">
+<body>
   <!--Шапка сайта-->
   <header class="header">
     <div class="container header__container">
@@ -102,8 +102,8 @@
               <div class="catalog__img">
                 <picture>
                   <source srcset="./images/option1.webp 1x, ./images/option1x2.webp 2x" type="image/webp" />
-                  <img srcset="./images/option1.jpg 1x, ./images/option1x2.jpg 2x" src="./images/option1.jpg"
-                    alt="Технокряк" width="450" height="294" />
+                  <source srcset="./images/option1.jpg 1x, ./images/option1x2.jpg 2x" type="image/jpeg" />
+                  <img src="./images/option1.jpg" alt="Технокряк" width="450" height="294" />
                 </picture>
                 <p class="catalog__description">
                   Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -122,8 +122,8 @@
               <div class="catalog__img">
                 <picture>
                   <source srcset="./images/option2.webp 1x, ./images/option2x2.webp 2x" type="image/webp" />
-                  <img srcset="./images/option2.jpg 1x, ./images/option2x2.jpg 2x" src="./images/option2.jpg"
-                    alt="Постер NBA" width="450" height="294" />
+                  <source srcset="./images/option2.jpg 1x, ./images/option2x2.jpg 2x" type="image/jpeg" />
+                  <img src="./images/option2.jpg" alt="Постер NBA" width="450" height="294" />
                 </picture>
                 <p class="catalog__description">
                   Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -142,8 +142,8 @@
               <div class="catalog__img">
                 <picture>
                   <source srcset="./images/option3.webp 1x, ./images/option3x2.webp 2x" type="image/webp" />
-                  <img srcset="./images/option3.jpg 1x, ./images/option3x2.jpg 2x" src="./images/option3.jpg"
-                    alt="Ресторан Seafood" width="450" height="294" />
+                  <source srcset="./images/option3.jpg 1x, ./images/option3x2.jpg 2x" type="image/jpeg" />
+                  <img src="./images/option3.jpg" alt="Ресторан Seafood" width="450" height="294" />
                 </picture>
                 <p class="catalog__description">
                   Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -162,8 +162,8 @@
               <div class="catalog__img">
                 <picture>
                   <source srcset="./images/option4.webp 1x, ./images/option4x2.webp 2x" type="image/webp" />
-                  <img srcset="./images/option4.jpg 1x, ./images/option4x2.jpg 2x" src="./images/option4.jpg"
-                    alt="Проект Prime" width="450" height="294" />
+                  <source srcset="./images/option4.jpg 1x, ./images/option4x2.jpg 2x" type="image/jpeg" />
+                  <img src="./images/option4.jpg" alt="Проект Prime" width="450" height="294" />
                 </picture>
                 <p class="catalog__description">
                   Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -182,8 +182,8 @@
               <div class="catalog__img">
                 <picture>
                   <source srcset="./images/option5.webp 1x, ./images/option5x2.webp 2x" type="image/webp" />
-                  <img srcset="./images/option5.jpg 1x, ./images/option5x2.jpg 2x" src="./images/option5.jpg"
-                    alt="Проект Boxes" width="450" height="294" />
+                  <source srcset="./images/option5.jpg 1x, ./images/option5x2.jpg 2x" type="image/jpeg" />
+                  <img src="./images/option5.jpg" alt="Проект Boxes" width="450" height="294" />
                 </picture>
                 <p class="catalog__description">
                   Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -202,8 +202,8 @@
               <div class="catalog__img">
                 <picture>
                   <source srcset="./images/option6.webp 1x, ./images/option6x2.webp 2x" type="image/webp" />
-                  <img srcset="./images/option6.jpg 1x, ./images/option6x2.jpg 2x" src="./images/option6.jpg"
-                    alt="Inspiration has no Borders" width="450" height="294" />
+                  <source srcset="./images/option6.jpg 1x, ./images/option6x2.jpg 2x" type="image/jpeg" />
+                  <img src="./images/option6.jpg" alt="Inspiration has no Borders" width="450" height="294" />
                 </picture>
                 <p class="catalog__description">
                   Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -222,8 +222,8 @@
               <div class="catalog__img">
                 <picture>
                   <source srcset="./images/option7.webp 1x, ./images/option7x2.webp 2x" type="image/webp" />
-                  <img srcset="./images/option7.jpg 1x, ./images/option7x2.jpg 2x" src="./images/option7.jpg"
-                    alt="Издание Limited Edition" width="450" height="294" />
+                  <source srcset="./images/option7.jpg 1x, ./images/option7x2.jpg 2x" type="image/jpeg" />
+                  <img src="./images/option7.jpg" alt="Издание Limited Edition" width="450" height="294" />
                 </picture>
                 <p class="catalog__description">
                   Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -242,8 +242,8 @@
               <div class="catalog__img">
                 <picture>
                   <source srcset="./images/option8.webp 1x, ./images/option8x2.webp 2x" type="image/webp" />
-                  <img srcset="./images/option8.jpg 1x, ./images/option8x2.jpg 2x" src="./images/option8.jpg"
-                    alt="Проект LAB" width="450" height="294" />
+                  <source srcset="./images/option8.jpg 1x, ./images/option8x2.jpg 2x" type="image/jpeg" />
+                  <img src="./images/option8.jpg" alt="Проект LAB" width="450" height="294" />
                 </picture>
                 <p class="catalog__description">
                   Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -262,8 +262,9 @@
               <div class="catalog__img">
                 <picture>
                   <source srcset="./images/option9.webp 1x, ./images/option9x2.webp 2x" type="image/webp" />
-                  <img srcset="./images/option9.jpg 1x, ./images/option9x2.jpg 2x" src="./images/option9.jpg"
-                    alt="Growing Business" width="450" height="294" />
+                  <source srcset="./images/option9.jpg 1x, ./images/option9x2.jpg 2x" type="image/jpeg" />
+
+                  <img src="./images/option9.jpg" alt="Growing Business" width="450" height="294" />
                 </picture>
                 <p class="catalog__description">
                   Ресурс предлагает комплексные предложения с разным уровнем функционала и
@@ -354,7 +355,7 @@
       </div>
     </div>
   </footer>
-
+  <script src="./js/header-height.js"></script>
   <script src="./js/menu.js"></script>
 </body>
 
